;; we start by ignoring node_modules. if you need to consume an OCaml 
;; project from `node_modules`, this should work:
;; - remove the `dirs` stanza below
;; - add a `(subdir node_modules (dirs only_your_package))`

(dirs :standard \ node_modules)

; haven't figured out decco yet
; (subdir
;  node_modules
;  (dirs decco)
;  (subdir
;   decco
;   (dirs src)
;   (subdir
;    src
;    (library
;     (name decco_runtime)
;     (wrapped false)
;     (modes melange)
;     (melange.compile_flags :standard -w -9)))))
