opam-version: "2.0"
synopsis: "ReasonML full stack"
description: "ReasonML full stack"
maintainer: ["LB"]
authors: ["LB"]
license: "MIT"
depends: [
  "ocaml" {>= "4.14.0" & < "5.0.0"}
  "reason" {>= "3.8.1" & < "4.0.0"}
  "dune" {>= "3.8"}
  "melange" {>= "1.0.0"}
  "reactjs-jsx-ppx" {>= "1.0.0"}
  "reason-react" {>= "0.11.0"}
  "ocaml-lsp-server" {dev}
  "dot-merlin-reader" {dev}
  "odoc" {with-doc}
  "dream" {>= "1.0.0~alpha5"}
]
